# tilde-desktop

./: .gitignore  Makefile  README.md  azure-pipelines.yml
.circleci/: config.yml
activity-monitor/: monitor  monitor.lpr  unit1.lfm
activity-monitor/GUI/: CMakeLists.txt  README.md  main.cpp  monitorGUI.lpr  monitorGUI.lps  old.cpp  unit1.pas
activity-monitor/GUI/monitorGUI.app/Contents/: Info.plist
activity-monitor/backup/: monitor.lpr
activity-monitor/lib/aarch64-darwin/: monitor.compiled
amiga/: Makefile
amiga/src/: Makefile  linker.ld  main.c  window.c
amiga/updater/src/: gui.c  torrent.c  torrent.h
api/: api.pas
api/backup/: api.pas.bak
cli/activity-monitor/: monitor.lpi  monitor.lpr  monitor.lps  unit1.pas
ctm-interpreter/: README.md  cli.pas  cli.ppu  ctminterpreter  ctminterpreter.lpi  ctminterpreter.lpr  ctminterpreter.lps  githubreader.pas  linkfiles4989.res  linkfiles5113.res  openai.pas  openai.ppu  pascalscript.pas  ringsce  ringsce.pas  symbol_order4989.fpc
ctm-interpreter/backup/: cli.pas  ctminterpreter.lpi  ctminterpreter.lpr  ctminterpreter.lps  githubreader.pas  openai.pas  pascalscript.pas
ctm-interpreter/cmake/: FindFPC.cmake  FindKCC.cmake  FindKayteIDE.cmake  FindLazarus.cmake  FindSDL2.cmake  FindSDL3.cmake
ctm-interpreter/lib/aarch64-darwin/: cli.ppu  ctminterpreter.compiled  githubreader.ppu  openai.ppu  pascalscript.ppu
gui/activity-monitor/: CMakeLists.txt  activitymonitortui.lpi  activitymonitortui.lpr  activitymonitortui.lps  build-qt.sh  build.sh  check_winsdk.sh  main.cpp  monitorGUI.lpi  qt6-cross-toolchain.cmake  windows-arm64-toolchain.cmake
gui/activity-monitor/build-windows-arm64/: CMakeCache.txt
kbs/: .gitignore  App.js  BUILD_PASCAL.md  README.md  SPA.bsdesign  index.html  install_db.html  kaytebuildsystem.lpi  kaytebuildsystem.lpr  kaytebuildsystem.lps  login.html  server.js  setup.sh
kbs/assets/bootstrap/css/: bootstrap.min.css
kbs/assets/css/: styles.css
kbs/assets/js/: app.js
kbs/backup/: kaytebuildsystem.lpr  kaytebuildsystem.lps
kbs/js/: kaytebuildsystem.compiled
kbs/public/: index.html
kbs/spa/: index.html
kbs/spa/assets/css/: Lato.css  bss-overrides.css
md2/: bsp_importer.py
monitor/: app_open_times.txt
monitor/monitor/: main.cpp  monitor.cpp  monitor.h  monitor.pro
site/: about.php  contact.php  footer.php  header.php  index.php
site/wp-content/github-repo-list/: github-repo-list.php
src/manager/: MainForm.lfm  directorytree.pas  filelist.pas  filemanager.pas  mainform.pas  manager.lfm  manager.lpi  manager.lpr  manager.lps  manager.pas
src/manager/backup/: manager.lpi  manager.lps  manager.pas
tools/editor/: editor.lpi  editor.pas  unit1.lfm
tools/editor/backup/: editor.lpr  editor.lps
tools/kayte-lang/: CMakeFiles.txt  bytecode.pas  bytecode.ppu  cli.pas  cli.ppu  example.kayte  fpmarkdownprocessor.pas  fpmarkdownprocessor.ppu  kayteparser.pas  kayteparser.ppu  kc  kings  kings 2  kings.lpi  kings.lpr  kings.lps  link36590.res  linkfiles11590.res  linkfiles36537.res  linkfiles9629.res  linkfiles9661.res  simplehttpserver.pas  simplehttpserver.ppu  styles.css  testbytecode.pas  testbytecode.ppu  testrunner.pas  virtualmachine.pas  virtualmachine.ppu  vm.pk3  vulkan.pas  xmlparser.pas  xmlparser.ppu
tools/kayte-lang/backup/: bytecode.pas  cli.pas  fpmarkdownprocessor.pas  kayteparser.pas  kings 2.lpr  kings.lpi  kings.lpr  kings.lps  simplehttpserver.pas  testbytecode.pas  testrunner.pas  virtualmachine.pas  vulkan.pas
tools/kayte-lang/kayte-library/: project1.lpi  project1.lpr  project1.lps
tools/kayte-lang/kc/: kayte-lang-bridge.h
tools/kings/: README.md  astro.config.mjs  index.js  irc-server.js  package-lock.json  package.json  server.js  styles.scss
tools/kings/.astro/: settings.json
tools/kings/public/: docs.php  style.css
tools/kings/src/: .env  styles.scss
tools/ringsGIT/: git.lpi  git.lpr  git.lps  ringsgit.lfm  ringsgit.pas
tools/ringsGIT/backup/: git.lpi  git.lps
tools/ringsce-editor/: .gitignore  CMakeLists.txt  Info.plist  LICENSE  Makefile  SynFacilCompletion.pas  app.cfg  cpu_math.pas  debugunit.pas  kaytefiledetector.pas  kaytesave.pas  package-lock.json  package.json  php.xml  project1.lpi  project1.lpr  project1.lps  project1.res  ringsCE.pot  savebas.pas  savephp.pas  search.lfm  search.pas  settings.pas  splashscreen.pas  sqlcon.pas  unit1.lrj  unit1.pas  unit2.pas  unit3.pas  unit4.pas  updater.lrj  updater.pas  wordlist.txt
tools/ringsce-editor/.circleci/: config.yml
tools/ringsce-editor/backup/: appconfig.pas  debugunit.pas  kaytefiledetector.pas  project1.lpi  project1.lpr  project1.lps  unit1.lfm  unit1.pas
tools/ringsce-editor/cmake/: CMakePascalCompiler.cmake
tools/ringsce-editor/cmake_modules/: FindPascal.cmake
tools/ringsce-editor/docs/: building.md
tools/ringsce-editor/headers/: console.h  editor.h  pch.h
tools/ringsce-editor/ide/silicon/gui/: CMakeLists.txt  example-0  main.c  mainwindow.m
tools/ringsce-editor/ide/silicon/gui/commands/: commands.c
tools/ringsce-editor/scripts/: build.sh
tools/ringsce-editor/update/: libpascurl.ppu  updater.pas  updater.ppu
tools/updater/: Makefile
tools/updater/src/: gui.h  main.c
(+187 files in other folders)
